# json-search-engine

./: Answers.md  AvlPair.cpp  AvlPair.h  AvlTree.h  CMakeLists.txt  IndexHandler.cpp  IndexHandler.h  ParsedDoc.cpp  ParsedDoc.h  ParsedQuery.cpp  ParsedQuery.h  Parser.cpp  Parser.h  README.md  UserInterface.cpp  UserInterface.h  engineTest.cpp  fullAVLTest.cpp  main.cpp
